// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      type="checkbox"
      id="checkbox-in-color-context"
      checked
      aria-describedby="checkbox-in-color-context:description"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="checkbox-in-color-context:description"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hva vil du vite mer om?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--controlled-barnehage"
      name="my-controlled"
      value="barnehage"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-barnehage"
    >
      Barnehage
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--controlled-grunnskole"
      name="my-controlled"
      value="grunnskole"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-grunnskole"
    >
      Grunnskole
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--controlled-videregaende"
      name="my-controlled"
      value="videregaende"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-videregaende"
    >
      Videregående
    </label>
  </div>
</fieldset>
<p
  data-field="validation"
  hidden
  id=":r5:"
>
</p>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Du har valgt:
</p>
<div style="display: flex; gap: 1rem;">
  <button
    data-variant="primary"
    type="button"
  >
    Toggle Grunnskole
  </button>
  <button
    data-variant="primary"
    type="button"
  >
    Toggle Videregående
  </button>
</div>
`;

exports[`Disabled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--disabled-email"
      name="my-disabled"
      disabled
      value="epost"
      checked
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--disabled-telefon"
      name="my-disabled"
      disabled
      value="telefon"
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--disabled-sms"
      name="my-disabled"
      disabled
      value="sms"
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id=":r9:"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--group-email"
      name="my-group"
      value="epost"
      checked
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--group-telefon"
      name="my-group"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--group-sms"
      name="my-group"
      value="sms"
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id=":r1:"
  >
  </p>
</fieldset>
`;

exports[`Indeterminate In Table 1`] = `
<table>
  <colgroup>
    <col style="width: 1px;">
    <col style="width: 10em;">
    <col>
  </colgroup>
  <thead>
    <tr>
      <th>
        <div>
          <input
            type="checkbox"
            id="components-checkbox--indeterminate-in-table-all"
            aria-label="Velg alle"
            name="components-checkbox--indeterminate-in-table"
            value="all"
          >
        </div>
      </th>
      <th>
        Navn
      </th>
      <th>
        Utdanningsnivå
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            id="components-checkbox--indeterminate-in-table-1"
            aria-labelledby="components-checkbox--indeterminate-in-table-1-name"
            name="components-checkbox--indeterminate-in-table"
            value="1"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-1-name">
        Lise Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            id="components-checkbox--indeterminate-in-table-2"
            aria-labelledby="components-checkbox--indeterminate-in-table-2-name"
            name="components-checkbox--indeterminate-in-table"
            value="2"
            checked
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-2-name">
        Ola Nordmann
      </td>
      <td>
        Grunnskole
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            id="components-checkbox--indeterminate-in-table-3"
            aria-labelledby="components-checkbox--indeterminate-in-table-3-name"
            name="components-checkbox--indeterminate-in-table"
            value="3"
            checked
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-3-name">
        Kari Nordmann
      </td>
      <td>
        Videregående
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            id="components-checkbox--indeterminate-in-table-4"
            aria-labelledby="components-checkbox--indeterminate-in-table-4-name"
            name="components-checkbox--indeterminate-in-table"
            value="4"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-4-name">
        Per Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`One Option 1`] = `
<fieldset>
  <legend data-weight="medium">
    Bekreft at du er over 18 år
  </legend>
  <p data-variant="default">
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--one-option"
      value="samtykke"
    >
    <label
      data-weight="regular"
      for="components-checkbox--one-option"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<div>
  <input
    type="checkbox"
    id="checkbox-preview"
    value="value"
    aria-describedby="checkbox-preview:description"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="checkbox-preview:description"
  >
    Description
  </div>
</div>
`;

exports[`Read Only 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--read-only-email"
      name="my-readonly"
      readonly
      value="epost"
      checked
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--read-only-telefon"
      name="my-readonly"
      readonly
      value="telefon"
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--read-only-sms"
      name="my-readonly"
      readonly
      value="sms"
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id=":r7:"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--with-error-email"
      aria-describedby=":r3:"
      aria-invalid="true"
      name="my-error"
      value="epost"
      checked
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--with-error-telefon"
      aria-describedby=":r3:"
      aria-invalid="true"
      name="my-error"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      type="checkbox"
      id="components-checkbox--with-error-sms"
      aria-describedby=":r3:"
      aria-invalid="true"
      name="my-error"
      value="sms"
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    id=":r3:"
  >
    Du må velge minst to kontaktalternativ
  </p>
</fieldset>
`;
